Fix footer on mobile Safari

--- a/source/stylesheets/_grid.scss
+++ b/source/stylesheets/_grid.scss
@@ -56,7 +56,7 @@ body {
 //sticky footer
 body {
     display: flex;
-    min-height: 100vh;
+    min-height: 100%;
     flex-direction: column;
 }
 
